# english-buddy

./: .env.example  .gitignore  CLAUDE.md  pyproject.toml
english_buddy/: __main__.py  api.py  cli.py  config.py  llm.py  models.py  prompts.py  store.py  wechat.py
english_buddy/static/: index.html  result.html
